[project]
name = "tp2-datascience"
version = "0.1.0"
description = ""
authors = [
    {name = "Durel Kenfack",email = "durel.kenfack@et.esiea.fr"}
]
readme = "README.md"
requires-python = ">=3.14,<3.14.1 || >3.14.1,<4.0"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "python-louvain (>=0.16,<0.17)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
